# libmva

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/mva_feature_match/: mva_feature_match.h
include/mva_platform/: mva_convolution.h  mva_data_define.h  mva_image.h  mva_kdtree.h
include/mva_recog/: mva_circle_find.h  mva_feature_match.h
src/mva_feature_match/: CMakeLists.txt  mva_feature_match_sift.cc  mva_feature_match_sift.h
src/mva_platform/: CMakeLists.txt  mva_image.cc  mva_mat.cc
src/mva_platform/include/: mva_data_define.h  mva_kdtree.h  mva_mat.h
src/mva_platform/src/: mva_kdtree.cc  mva_mat.cc
src/mva_recog/: CMakeLists.txt  mva_feature_match.cc
toolchains/: linux_gcc_x64.cmake
tools/: build_linux_gcc_x64.sh
